fix z-index bug

--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -107,6 +107,7 @@ md-content #heros .text {
   width: 100%;
   position: absolute;
   bottom: 30px;
+  z-index: -999;
 }
 @media (min-width: 960px) {
   #left-side {
