--- a/app/public/sass/_content.scss
+++ b/app/public/sass/_content.scss
@@ -77,6 +77,8 @@ md-content #heros {
         width: 100%;
         position: absolute;
         bottom: 30px;
+        z-index: -999;
+
     }
     @media(min-width:960px) {
         background-color: rgba(white,0.7);
